--- a/deck/4.md
+++ b/deck/4.md
@@ -1,4 +1,4 @@
-# What Do I Want
+# What I Want
 
 ```jsx
 class MyComponent {
@@ -8,16 +8,11 @@ class MyComponent {
   }
   
   renderMobile() {
-    return (
-      {this.renderUsernameInput()}
-    )
-  
+    return {this.renderUsernameInput()}
   }
   
   renderDesktop() {
-    return (
-      <p>User Name: {this.renderUsernameInput()}</p>
-    )
+    return <p>User Name: {this.renderUsernameInput()}</p>
   }
   
 }
